@@ -30,4 +30,5 @@ Michael Stumpf
 Helmut Wallner
 Eric B. Weddington
 Joerg Wunsch
-University of California
+Dmitry Xmelkov
+University of California, Berkeley
